# MakeWiki.skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
examples/sample-node-app/: package.json
examples/sample-python-cli/: .env.example  Makefile  README.md  pyproject.toml
examples/sample-python-cli/src/sample/: cli.py
makewiki/: README.md  README.zh-CN.md  configuration.md  configuration.zh-CN.md  faq.md  faq.zh-CN.md  getting-started.md  getting-started.zh-CN.md  index.md  installation.md  installation.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md
makewiki/usage/: doc-generation.md  doc-generation.zh-CN.md  overview.md  overview.zh-CN.md  project-inspection.md  project-inspection.zh-CN.md
scripts/: run_toolkit.py
skills/makewiki/: SKILL.md
skills/makewiki-init/: SKILL.md
skills/makewiki-llm-scan/: SKILL.md
skills/makewiki-module-brief/: SKILL.md
skills/makewiki-page-plan/: SKILL.md
skills/makewiki-page-repair/: SKILL.md
skills/makewiki-page-write/: SKILL.md
skills/makewiki-review/: SKILL.md
skills/makewiki-scan/: SKILL.md
skills/makewiki-semantic-root/: SKILL.md
skills/makewiki-surface-card/: SKILL.md
skills/makewiki-validate/: SKILL.md
skills/makewiki-workflow-brief/: SKILL.md
src/makewiki_skills/: __init__.py  __main__.py  cli.py  config.py  documents.py  toolkit_launcher.py
tests/: conftest.py
tests/integration/: _helpers.py  test_cross_validate_catches_inconsistency.py  test_output_structure.py  test_pipeline_full.py  test_user_facing_output.py
tests/unit/: test_cli_scan_output.py  test_cli_write_modes.py  test_makewiki_skill_contract.py  test_skill_bootstrap_update.py  test_skill_shell_safety.py  (+2 more)
(+85 files in other folders)
