[project]
name = "sample-cli"
version = "1.2.0"
description = "A sample Python CLI tool for testing MakeWiki documentation generation."
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
sample-cli = "sample.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
